--- a/carta.html
+++ b/carta.html
@@ -15,8 +15,8 @@
             <strong><abb title="Doctor">Dr.</abb> Eleanor Gaye<br></strong> Awesome Science faculty<br> University of Awesome<br>
             <address>Bottown, CA 99999, </address><br>
             <abbr title="Estados Unidos">USA</abbr><br>
-            </b><abbr title="telefono"><b>Tel: </b></abbr>123-456-789<br>
-            <abbr title="Correo electronico"><b>Email: </b></abbr><a>no_reply@example.com</a><br> 20 january 2016<br>
+            <abbr title="telefono">Tel: </abbr>123-456-789<br>
+            <abbr title="Correo electronico">Email: </abbr><a>no_reply@example.com</a><br> 20 january 2016<br>
         </p>
     </div>
 
@@ -37,9 +37,11 @@
     <p>
         We are happy to accomodate you starting your study with us at any time, however it would suit us better if you<br> could start at the beginning of a semester; the start dates for each one are as follows:<br>
         <br>
-        <li>Fisrt semester: 9 September 2016</li>
-        <li>Second semester: 15 January 2017</li>
-        <li>Third semester: 2 Mayo 2017</li>
+        <div class="espacio">
+            <li>Fisrt semester: 9 September 2016</li>
+            <li>Second semester: 15 January 2017</li>
+            <li>Third semester: 2 Mayo 2017</li>
+        </div>
         <br>
         <br> Please let me know if this is ok, and if so which start date you would prefer.<br>
         <br> You can find more information about <a href="university">important university dates</a> on our website.<br>
@@ -52,9 +54,11 @@
         person wed like to have on our team. Saying that, of the ideas you submitted we were most intrigued<br> by are as follows, in order of priority:<br><br>
     </p>
     <br>
-    <li value=1>Turning <abbr title="agua">H<sub>2</sub>o</abbr> into wine, and the health benefits of Resveratrol (c14h12o3.)</li>
-    <li>Easuring the effect on performance of funk bassplayers at tempratures exceeding 30ºC(86ºF), when the<br> audience size exponentially increases(effect of 3 x 103>3 x 104</li>
-    <li><u>HTML</u> and <u>CSS</u> construcs for representing musical scopes.</li>
+    <div class="espacio">
+        <li value=1>Turning <abbr title="agua">H<sub>2</sub>o</abbr> into wine, and the health benefits of Resveratrol (c<sub>14</sub>h<sub>12</sub>O<sub>3</sub>.)</li>
+        <li>Easuring the effect on performance of funk bassplayers at tempratures exceeding 30ºC(86ºF), when the<br> audience size exponentially increases(effect of 3 x 10<sup>3</sup>>3 x 10<sup>4</sup></li>
+        <li><u>HTML</u> and <u>CSS</u> construcs for representing musical scopes.</li>
+    </div>
     <br>
     <p>
         So pleace can you provide more information on each of these subjects, including how long youd expectthe<br> research totake, required staff and other resources and anything else you think wed need to know? Thanks.
