--- a/carta.html
+++ b/carta.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <div class="derecha">
+    <div class="inicio">
         <p>
             <strong><abb title="Doctor">Dr.</abb> Eleanor Gaye<br></strong> Awesome Science faculty<br> University of Awesome<br>
             <address>Bottown, CA 99999, </address><br>
             <abbr title="Estados Unidos">USA</abbr><br>
             <abbr title="telefono">Tel: </abbr>123-456-789<br>
-            <abbr title="Correo electronico">Email: </abbr><a>no_reply@example.com</a><br> 20 january 2016<br>
+            <abbr title="Correo electronico">Email: </abbr><a href="lbardaless13@unc.edu.pe"> no_reply@example.com</a><br> 20 january 2016<br>
         </p>
     </div>
 
