--- a/carta.html
+++ b/carta.html
@@ -81,7 +81,7 @@
                 <br> For more of my research,see my <a href="dance">exotic dance research page</a>.<br> Yours Sincerely.<br>
                 <br>
                 <br>
-                <abbr title="Doctor">Dr. </abbr> Elanor Gaye<br> University of Awesome motto: "Be excellent to each other." -- Bills S Preston. Esq
+                <abbr title="Doctor">Dr. </abbr> Elanor Gaye<br> University of Awesome motto: <i> "Be excellent to each other." -- Bills S Preston. Esq</i>
             </p>
         </td>
     </table>
