--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inicio</title>
+    <title>Basaluan 22</title>
 </head>
 
 <body>
-    <header>
-        <a href="carta.html">Ver Carta</a>
+
+    <a href="carta.html">Ver Carta</a>
+
+    <figure class="basaluan">
+        <img src="multimedia/basaluan.png" alt="Basaluan">
+    </figure>
+
+    <header class="encabezado">
+        <h1>BASALUAN</h1>
+        <h2>Bardales Saucedo, Luis Angel</h2>
     </header>
+
+    <nav class="barra_navegacion">
+        <div id="enlaces">
+            <div id="fotos">
+
+            </div>
+
+        </div>
+    </nav>
+
 </body>
 
 </html>
