--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="carta.html">Ver Carta</a>
 
     <figure class="basaluan">
-        <img src="multimedia/basaluan.png" alt="Basaluan">
+        <img src="inicio/archivos/basaluan.png" alt="basaluan">
     </figure>
 
     <header class="encabezado">
@@ -24,11 +24,54 @@
     <nav class="barra_navegacion">
         <div id="enlaces">
             <div id="fotos">
-
+                <a href="inicio/informacion.html" title="informacion">
+                    <h3>Informacion</h3>
+                </a>
             </div>
-
+            <div id="fotos">
+                <a href="inicio/galeria.html" title="galeria">
+                    <h3>Galeria</h3>
+                </a>
+            </div>
+            <div id="fotos">
+                <a href="inicio/contacto.html" title="contacto">
+                    <h3>Contacto</h3>
+                </a>
+            </div>
         </div>
     </nav>
+
+    <section class="seccion">
+        <article class="articulo1">
+            <p id="descripcion">
+                <h4>Este es el inicio de mi pagina web desarrollada en el curso de Ingenieria Web.</h4>
+            </p>
+        </article>
+        <article class="articulo2">
+            <p id="texto">
+                <h4>En esta pagina se presenta la informacion del alumno Luis Angel Bardales Saucedo; ademas incluira todos los laboratorios desarrollados durante el curso.</h4>
+            </p>
+        </article>
+    </section>
+
+    <aside class="contenido">
+        <blockquote>
+            <a href="paginas_web/introduccion.html" title="introduccion">
+                <h5>Introduccion a HTML</h5>
+            </a>
+        </blockquote>
+        <blockquote>
+            <a href="paginas_web/carta.html" title="carta">
+                <h5>Practica CSS (Carta)</h5>
+            </a>
+        </blockquote>
+    </aside>
+
+    <footer class="pie_pagina">
+        <h6>
+            @Derechos Reservados BASALUAN
+        </h6>
+    </footer>
 
 </body>
 
