--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basaluan 22</title>
+
+    <link rel="icon" type="image/ico" href="inicio/archivos/icono.ico" />
 </head>
 
 <body>
-
-    <a href="carta.html">Ver Carta</a>
 
     <figure class="basaluan">
         <img src="inicio/archivos/basaluan.png" alt="basaluan">
