--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Basaluan 22</title>
 
     <link rel="icon" type="image/ico" href="inicio/archivos/icono.ico" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <figure class="basaluan">
-        <img src="inicio/archivos/basaluan.png" alt="basaluan">
+    <figure>
+        <img id="basaluan" src="inicio/archivos/basaluan.png" alt="basaluan">
     </figure>
 
     <header class="encabezado">
@@ -23,17 +24,17 @@
 
     <nav class="barra_navegacion">
         <div id="enlaces">
-            <div id="fotos">
+            <div id="informacion">
                 <a href="inicio/informacion.html" title="informacion">
                     <h3>Informacion</h3>
                 </a>
             </div>
-            <div id="fotos">
+            <div id="galeria">
                 <a href="inicio/galeria.html" title="galeria">
                     <h3>Galeria</h3>
                 </a>
             </div>
-            <div id="fotos">
+            <div id="contacto">
                 <a href="inicio/contacto.html" title="contacto">
                     <h3>Contacto</h3>
                 </a>
@@ -49,7 +50,7 @@
         </article>
         <article class="articulo2">
             <p id="texto">
-                <h4>En esta pagina se presenta la informacion del alumno Luis Angel Bardales Saucedo; ademas incluira todos los laboratorios desarrollados durante el curso.</h4>
+                <h4>En esta pagina se presenta la información del alumno Luis Angel Bardales Saucedo; además, incluira todos los laboratorios desarrollados durante el curso.</h4>
             </p>
         </article>
     </section>
