--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Basaluan 22</title>
 
     <link rel="icon" type="image/ico" href="inicio/archivos/icono.ico" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
