--- a/paginas_web/carta.html
+++ b/paginas_web/carta.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="estilo/style.css " type="text/css">
-    <title>Carta</title>
+    <title>Practica CSS</title>
+
+    <link rel="stylesheet" type="text/css" href="/paginas_web/hojas_estilo/carta.css" />
 </head>
 
 <body>
