--- a/paginas_web/carta.html
+++ b/paginas_web/carta.html
@@ -34,16 +34,16 @@
         </b>
         <abbr title="datos">4321 Cliff top Edge</abbr><br>
         <abbr title="datos">Dover, CT9 XXX</abbr><br>
-        <abbr title="ciudad">UK</abbr><br><br>
+        <abbr title="ciudad">UK</abbr><br>
     </div>
 
     <div class="remitente">
         <p id="remitente">
             <abbr title="remitente">Re: </abbr>
-            <abbr title="nombre">Eileen Dover University application</abbr><br><br>
+            <abbr title="nombre">Eileen Dover University application</abbr><br>
         </p>
         <abbr title="datos">Dear Eileen,</abbr><br>
-        <p>Than you for your recent application to join us at the University ofawesome's Science faculty to study as part<br> of your <u>PhD</u> next year, I will answer your questions one by one, in the following sections.</p><br>
+        <p>Than you for your recent application to join us at the University ofawesome's Science faculty to study as part<br> of your <u>PhD</u> next year, I will answer your questions one by one, in the following sections.</p>
     </div>
 
     <div class="seccion">
