--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
     <aside class="contenido">
         <blockquote>
             <a href="paginas_web/introduccion.html" title="introduccion">
-                <h5>Introduccion a HTML</h5>
+                <h1>Introduccion a HTML</h1>
             </a>
         </blockquote>
         <blockquote>
             <a href="paginas_web/carta.html" title="carta">
-                <h5>Practica CSS (Carta)</h5>
+                <h1>Practica CSS (Carta)</h1>
+            </a>
+        </blockquote>
+        <blockquote>
+            <a href="paginas_web/practica.html" title="practica">
+                <h1>Practica Calificada</h1>
             </a>
         </blockquote>
     </aside>
