--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <img id="basaluan" src="inicio/archivos/basaluan.png" alt="basaluan">
     </figure>
 
+    <audio src="/inicio/archivos/musica.mp3" autoplay="true" loop="true">Musica de fondo</audio>
+
     <header class="encabezado">
         <h1>BASALUAN</h1>
         <h2>Bardales Saucedo, Luis Angel</h2>
@@ -45,12 +47,37 @@
     <section class="seccion">
         <article class="articulo1">
             <p id="descripcion">
-                <h4>Este es el inicio de mi pagina web desarrollada en el curso de Ingenieria Web.</h4>
+                <h4>Este es el inicio de mi sitio web desarrollado en el curso de Ingenieria Web.</h4>
             </p>
         </article>
         <article class="articulo2">
             <p id="texto">
                 <h4>En esta pagina se presenta la información del alumno Luis Angel Bardales Saucedo; además, incluira todos los laboratorios desarrollados durante el curso.</h4>
+            </p>
+        </article>
+        <article class="articulo2">
+            <p id="texto">
+                <h4>A continuacion explicaremos el contenido de la pagina principal:</h4>
+                <dl>
+                    <dl>
+                        Encabezado
+                        <dd>
+                            Pseudonimo y nombre del alumno
+                        </dd>
+                    </dl>
+                    <dl>
+                        Barra de Navegacion
+                        <dd>
+                            Informacion, galeria multimedia y ubicacion del domicilio del alumno
+                        </dd>
+                    </dl>
+                    <dl>
+                        Contenido
+                        <dd>
+                            Practicas y laboratorios del curso de ingenieria web
+                        </dd>
+                    </dl>
+                </dl>
             </p>
         </article>
     </section>
@@ -73,7 +100,7 @@
         </blockquote>
         <blockquote>
             <a href="/frameworks/bootstrap/startbootstrap-resume-gh-pages/index.html" title="bootstrap">
-                <h5>Curriculum Vitae</h5>
+                <h5>Bootstrap (framework)</h5>
             </a>
         </blockquote>
     </aside>
