--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </a>
             </div>
             <div id="contacto">
-                <a href="inicio/contacto.html" title="contacto">
-                    <h3>Contacto</h3>
+                <a href="inicio/recomendaciones.html" title="recomendacion">
+                    <h3>Recomendaciones</h3>
                 </a>
             </div>
         </div>
@@ -55,7 +55,7 @@
                 <h4>En esta pagina se presenta la información del alumno Luis Angel Bardales Saucedo; además, incluira todos los laboratorios desarrollados durante el curso.</h4>
             </p>
         </article>
-        <article class="articulo2">
+        <article class="articulo3">
             <p id="texto">
                 <h4>A continuacion explicaremos el contenido de la pagina principal:</h4>
                 <dl>
@@ -68,7 +68,7 @@
                     <dl>
                         Barra de Navegacion
                         <dd>
-                            Informacion, galeria multimedia y ubicacion del domicilio del alumno
+                            Informacion personal, galeria multimedia y ubicacion del domicilio del alumno
                         </dd>
                     </dl>
                     <dl>
@@ -83,11 +83,6 @@
     </section>
 
     <aside class="contenido">
-        <blockquote>
-            <a href="paginas_web/introduccion.html" title="introduccion">
-                <h5>Introduccion a HTML</h5>
-            </a>
-        </blockquote>
         <blockquote>
             <a href="paginas_web/carta.html" title="carta">
                 <h5>Practica CSS (Carta)</h5>
