--- a/paginas_web/carta.html
+++ b/paginas_web/carta.html
@@ -54,9 +54,11 @@
             We are happy to accomodate you starting your study with us at any time, however it would suit us better if you<br> could start at the beginning of a semester; the start dates for each one are as follows:<br>
         </p>
         <div class="lista">
-            <li>Fisrt semester: 9 September 2016</li>
-            <li>Second semester: 15 January 2017</li>
-            <li>Third semester: 2 Mayo 2017</li>
+            <ol type="A">
+                <li>Fisrt semester: 9 September 2016</li>
+                <li>Second semester: 15 January 2017</li>
+                <li>Third semester: 2 Mayo 2017</li>
+            </ol>
         </div>
         <p>Please let me know if this is ok, and if so which start date you would prefer.</p>
         <p>
@@ -72,9 +74,11 @@
             wed like to have on our team. Saying that, of the ideas you submitted we were most intrigued<br> by are as follows, in order of priority:<br>
         </p>
         <div class="lista">
-            <li value="1">Turning <abbr title="agua">H<sub>2</sub>o</abbr> into wine, and the health benefits of Resveratrol (c<sub>14</sub>h<sub>12</sub>O<sub>3</sub>.)</li>
-            <li>Easuring the effect on performance of funk bassplayers at tempratures exceeding 30ºC(86ºF), when the<br> audience size exponentially increases(effect of 3 x 10<sup>3</sup>>3 x 10<sup>4</sup></li>
-            <li><u>HTML</u> and <u>CSS</u> construcs for representing musical scopes.</li>
+            <ol value="1">
+                <li>Turning <abbr title="agua">H<sub>2</sub>o</abbr> into wine, and the health benefits of Resveratrol (c<sub>14</sub>h<sub>12</sub>O<sub>3</sub>.)</li>
+                <li>Easuring the effect on performance of funk bassplayers at tempratures exceeding 30ºC(86ºF), when the<br> audience size exponentially increases(effect of 3 x 10<sup>3</sup>>3 x 10<sup>4</sup></li>
+                <li><u>HTML</u> and <u>CSS</u> construcs for representing musical scopes.</li>
+            </ol>
         </div>
         <p>
             So pleace can you provide more information on each of these subjects, including how long youd expectthe<br> research totake, required staff and other resources and anything else you think wed need to know? Thanks.
