--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <ul>
                             <li><a href="/pg/carta.html">Carta</a></li>
                             <li><a href="/pg/practica.html">Practica Calificada</a></li>
-                            <li><a href="#">Diversidad Animal de Cajamarca</a></li>
+                            <li><a href="/pg/cajamarca.html">Diversidad Animal de Cajamarca</a></li>
                         </ul>
                     </li>
                     <li><a href="#contact">Contacto</a></li>
@@ -417,7 +417,6 @@
                     <img src="img/fotos/7.jpg" alt="">
                     <img src="img/fotos/8.jpg" alt="">
                 </div>
-
             </div>
         </section>
         <section id="team">
