--- a/pg/cajamarca.html
+++ b/pg/cajamarca.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Diversidad Animal Cajamarca</title>
+    <title>Diversidad Animal de Cajamarca</title>
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
@@ -15,6 +15,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="css/cajamarca.css" />
+    <link rel="stylesheet" href="/ico/style.css">
+    <link rel="stylesheet" href="/ico/social.css">
+
 </head>
 
 <body>
@@ -23,7 +27,7 @@
         <div class="w3-center">
             <div class="w3-padding-32">
                 <div class="w3-padding-32">
-                    <h1 class="w3-xxxlarge w3-animate-bottom" style="color:rgb(227, 225, 241)">DIVERSIDAD ANIMAL</h1>
+                    <h1 class="w3-xxxlarge w3-animate-bottom">DIVERSIDAD ANIMAL</h1>
                     </h1>
                 </div>
             </div>
@@ -33,87 +37,185 @@
     <div class="w3-top">
         <div class="w3-row w3-padding w3-black opacidad" style="font-family: 'Montserrat Subrayada', sans-serif;">
             <div class="w3-col s3">
-                <a href="#cajamarca" class="w3-button w3-block w3-black">CAJAMARCA</a>
+                <a href="/index.html" class="w3-button w3-block w3-black"><img id="inicio" src="/img/inicio.png"></span>
+                </a>
             </div>
             <div class="w3-col s3 ">
-                <a href="#fauna" class="w3-button w3-block w3-black">FAUNA</a>
+                <a href="#cajamarca" class="w3-button w3-block w3-black">CAJAMARCA</a>
             </div>
             <div class="w3-col s3">
-                <a href="#habitat" class="w3-button w3-block w3-black">HABITAT</a>
+                <a href="#ambiente" class="w3-button w3-block w3-black">AMBIENTE ANIMAL</a>
             </div>
             <div class="w3-col s3">
-                <a href="#ubicación" class="w3-button w3-block w3-black">UBICACION</a>
+                <a href="#especies" class="w3-button w3-block w3-black">ESPECIES</a>
             </div>
         </div>
     </div>
 
     <div class="container-fluid text-center">
-        <div class="row content">
-            <div class="col-sm-3 sidenav">
-                <div class=" w3-margin-bottom w3-card">
-                    <img src="img/conejo.jpg" alt="Conejo" style="width:100%" class="w3-hover-opacity">
-                    <div class="w3-container w3-white">
-                        <p><b>Conejo silvestre</b></p>
+        <div class="col-sm-3 sidenav">
+            <div class=" w3-margin-bottom w3-card">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>
+                        <li data-target="#myCarousel" data-slide-to="5"></li>
+                        <li data-target="#myCarousel" data-slide-to="6"></li>
+                        <li data-target="#myCarousel" data-slide-to="7"></li>
+                        <li data-target="#myCarousel" data-slide-to="8"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img ali src="/img/cajamarca/i1.jpg" alt="Los Angeles">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i2.jpg" alt="Chicago">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i3.jpg" alt="New York">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i4.jpg" alt="New York">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i5.jpg" alt="New York">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i6.jpg" alt="New York">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i7.jpg" alt="New York">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i8.jpg" alt="New York">
+                        </div>
+                        <div class="item">
+                            <img src="/img/cajamarca/i9.jpg" alt="New York">
+                        </div>
                     </div>
-                </div>
-                <div class=" w3-margin-bottom w3-card">
-                    <img src="img/tigre.jpg" alt="Gato" style="width:100%" class="w3-hover-opacity">
-                    <div class="w3-container w3-white">
-                        <p><b>Gato salvaje</b></p>
-                    </div>
-                </div>
-                <div class=" w3-margin-bottom w3-card">
-                    <img src="img/vaca.JPG" alt="Vaca" style="width:100%" class="w3-hover-opacity">
-                    <div class="w3-container w3-white">
-                        <p><b>Vaca</b></p>
-                    </div>
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
-            <div class="col-sm-6  centro">
-                <h2 id="cajamarca">Cajamarca</h2>
+            <div class=" w3-margin-bottom w3-card" id="informacion">
+                <h4>
+                    Informacion de las especies oriundas de Cajamarca:
+                </h4>
+                <a href="https://es.wikipedia.org/wiki/Columbidae" class="link-details" title="Paloma"><img src="/img/cajamarca/i1.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/Leopardus_colocolo" class="link-details" title="Gato de Pajonales"><img src="/img/cajamarca/i2.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/Cavia_tschudii" class="link-details" title="Cuy Silvestre"><img src="/img/cajamarca/i3.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/Vicugna_pacos" class="link-details" title="Alpaca"><img src="/img/cajamarca/i4.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/Oryctolagus_cuniculus" class="link-details" title="Conejo Silvevstre"><img src="/img/cajamarca/i5.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/Cavia_tschudii" class="link-details" title="Cuy Silvestre"><img src="/img/cajamarca/i6.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/B%C3%BAho" class="link-details" title="Buho"><img src="/img/cajamarca/i7.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/Ardeidae" class="link-details" title="Garza"><img src="/img/cajamarca/i8.jpg"></a>
+                <a href="https://es.wikipedia.org/wiki/Hirundo_rustica" class="link-details" title="Golondrina"><img src="/img/cajamarca/i9.jpg"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-sm-6  centro">
+            <h2 id="cajamarca">Cajamarca</h2>
+            <br>
+            <p class="text-justify">Cajamarca se encuentra ubicada en el norte del Perú. Limita por el norte con la república de Ecuador,por el sur con La Libertad, por el este con Amazonas y por el oeste con Piura y Lambayeque.Cajamarca Tiene una población de 1,359,023 habitantes,
+                con una densidad de 40,79 habitantes/km², según Censo 2005. La ciudad de Cajamarca está a una altitud de 2,750 msnm, a 856 Km al norte de Lima, la capital del Perú.El límite más importante del departamento de Cajamarca está marcado hacia
+                el este por la cuenca del Marañon que lo separa del departamento de Amazonas.La situación geográfica de Cajamarca, cerca de la línea ecuatorial, ha modificado completamente su sistema de vida, y la fecundidad de sus suelos es realmente
+                grande. El departamento de Cajamarca comprende, en términos generales, dos zonas de climas distintos:una, la del norte, constituida por un un ecosistema semi tropical (San Ignacio, Jaén, partes de Cutervo y Chota), y la de sur, determinada
+                por un ecosistema que podríamos llamar quechua, dentro del cual, no obstante, encontramos también "islas" de otros ecosistemas (jalcas, jalcas fuertes o punas o páramos) en los pisos más elevados de las cordillera.
+            </p>
+            <p class="text-justify">Pocas regiones del Perú ofrecen, como ésta, tal diversidad de ambientes de extensión semejante.Las fajas climáticas se concentran en áreas relativamente pequeñas, debido a los cambios de altitud. Pero es una región de clima subhúmedo, con
+                lluvias estacionales y frecuentes períodos de sequía, por lo que la agricultura prospera con ayuda de la irrigación. Esta región no es solamente famosa por su historia sino por su composición geográfica y geológica. Ubicada en el lecho
+                de un prehistórico lago, sus fértiles tierras le han permitido utilizar el paisaje en forma admirable.
+            </p>
+            <div class="img_cajamarca">
+                <img src="/img/cajamarca/c1.jpg" alt="">
+                <img src="/img/cajamarca/c2.jpeg" alt="">
+                <img src="/img/cajamarca/c3.JPG" alt="">
+            </div>
+            <br>
+
+            <hr id="ambiente">
+            <br>
+            <div class="container-fluid ">
+                <h2>Ambiente</h2>
                 <br>
-                <p class="text-justify">Situada en la región del noroccidental del Perú y comprende un complejo sistema de climas, geología y topografía. Esto posibilita la existencia de ecosistemas variados y diversidad de especies, genes y representaciones culturales, los
-                    cuales han evolucionado y desarrollado adaptándose a los espacios que ocupan.</p>
+                <p class="text-justify">El departamento de Cajamarca está situado en la zona norandina, presenta zonas de sierra y selva. Limita por el norte con República del Ecuador; por el sur con La Libertad; por el oeste con Piura, Lambayeque y La Libertad y por el este
+                    con Amazonas. Su capital Cajamarca, es una ciudad ubicada en el valle interandino del mismo nombre, la ciudad se puede divisar desde la colina Santa Apolonia. Cajamarca actualmente representa el núcleo económico, turístico, minero,
+                    industrial, comercial y cultural de la sierra norte del Perú.
                 </p>
-                <img src="img/cajamarca.jpeg" alt="Cajamarca" style="width:60%">
-                <br>
-                <hr id="fauna">
-                <br>
-                <div class="container-fluid ">
-                    <h2>Fauna</h2>
-                    <br>
-                    <p class="text-justify">Cajamarca se caracteriza por la presencia de alpacas y vicuñas, pero también de venados, chinchilla y vizcachas. Las alturas andinas también es un territorio de los depredadores como el gavilán, halcón y cóndor. La cría de ganado vacuno
-                        tiene suma importancia, también desarrolla la cría de ganado ovino y de camélidos andinos. En la localidad de Namora se puede observar una importante estación, piscícola, que produce truchas y pejerreyes.</p>
+                <p class="text-justify">En la Ciudad de Cajamarca y alrededores el clima es seco, templado y soleado durante el día,refrigerado en la noche Temperatura media anual: maxima media 21ºC y minima media: 6ºC.
+                </p>
+                <div class="img_cajamarca">
+                    <img src="/img/cajamarca/a1.jpg" alt="">
+                    <img src="/img/cajamarca/a2.jpg" alt="">
+                    <img src="/img/cajamarca/a3.jpg" alt="">
+                    <img src="/img/cajamarca/a4.jpg" alt="">
+                    <img src="/img/cajamarca/a5.jpg" alt="">
+                    <img src="/img/cajamarca/a6.jpg" alt="">
                 </div>
-                <br>
-                <hr id="habitat">
-                <br>
-                <div class="container-fluid ex2">
-                    <h2>Habitat</h2>
-                    <img src="img/alice.jpg"></div>
             </div>
-            <div class="col-sm-3 sidenav ">
-                <div class=" w3-margin-bottom w3-card">
-                    <img src="img/pichon.jpg" alt="Pichon" style="width:100%" class="w3-hover-opacity">
-                    <div class="w3-container w3-white">
-                        <p><b>Pichón</b></p>
-                    </div>
+            <br>
+
+            <hr id="especies">
+            <br>
+            <div class="container-fluid">
+                <h2>Especies</h2>
+                <br>
+                <p class="text-justify">En cuanto a la fauna, en los valles interandinos habitan especies como el venado gris, la vizcacha, diversas especies de lagartijas, el cuy silvestre y el conejo silvestre. Sus depredadores naturales son el gato de los pajonales y el puma,
+                    aunque este último es más bien raro.
+                </p>
+                <p class="text-justify">En la actualidad se están re introduciendo camélidos en el departamento, pero en escaso número; esto es paradójico, pues en tiempos prehispánicos abundaban en la región. Con respecto a las aves, se encuentra palomas, tórtolas, garzas,
+                    gorriones, golondrinas, tordos y pericos. Entre las aves de rapiña están el cernícalo (shingo), el halcón perdiguero, el gavilán acanelado, el búho y el águila serrana.
+                </p>
+                <div class="img_cajamarca">
+                    <img src="/img/cajamarca/f1.jpg" alt="">
+                    <img src="/img/cajamarca/f2.jpg" alt="">
+                    <img src="/img/cajamarca/f3.jpg" alt="">
+                    <img src="/img/cajamarca/f4.jpg" alt="">
+                    <img src="/img/cajamarca/f5.jpg" alt="">
                 </div>
-                <div class=" w3-margin-bottom w3-card">
-                    <img src="img/halcon.jpg" alt="Halcon" style="width:100%" class="w3-hover-opacity">
-                    <div class="w3-container w3-white">
-                        <p><b>Halcón</b></p>
-                    </div>
+            </div>
+
+        </div>
+        <div class="col-sm-3 sidenav ">
+            <div class=" w3-margin-bottom w3-card">
+                <div id="subtitulo">
+                    <h3>Redes Sociales</h3>
                 </div>
-                <div class=" w3-margin-bottom w3-card">
-                    <img src="img/buho.jpg" alt="Buho" style="width:100%" class="w3-hover-opacity">
-                    <div class="w3-container w3-white">
-                        <p><b>Buho</b></p>
-                    </div>
+            </div>
+            <div class=" w3-margin-bottom w3-card">
+                <div class="social">
+                    <a href="https://www.facebook.com/autor" target="_blank" class="icon icon-facebook">&nbsp; Facebook<br></a>
+                    <a href="https://www.twitter.com/autor" target="_blank" class="icon icon-twitter">&nbsp; Twitter</a>
+                    <a href="https://www.youtube.com/" target="_blank" class="icon icon-youtube">&nbsp; YouTube</a>
+                    <a href="https://plus.google.com/" target="_blank" class="icon icon-google-drive">&nbsp; Google Drive</a>
+                    <a href="https://www.instagram.com/" target="_blank" class="icon icon-instagram">&nbsp; Instagram</a>
+                    <a href="https://www.pinterest.com/" target="_blank" class="icon icon-whatsapp">&nbsp; Whatsapp</a>
+                    <a href="mailto:contacto@dominio.com" class="icon icon-envelop">&nbsp; Mensajeria</a>
+                    <a href="http://webdevelopment.cubava.cu/feed/" target="_blank" class="icon icon-camera">&nbsp; Camara</a>
                 </div>
+            </div>
+            <div class=" w3-margin-bottom w3-card">
+                <div id="subtitulo">
+                    <h3>Granja Porcon</h3>
+                </div>
+            </div>
+            <div class=" w3-margin-bottom w3-card">
+                <video autoplay controls width="400" height="350" src="/img/cajamarca/video.mp4">Granja Porcon</video>
             </div>
         </div>
     </div>
+    </div>
+
+
 
 </body>
 
