--- a/pg/cajamarca.html
+++ b/pg/cajamarca.html
@@ -211,11 +211,34 @@
             <div class=" w3-margin-bottom w3-card">
                 <video autoplay controls width="400" height="350" src="/img/cajamarca/video.mp4">Granja Porcon</video>
             </div>
+            <div class=" w3-margin-bottom w3-card">
+                <div id="subtitulo">
+                    <h3>Para Reflexionar</h3>
+                </div>
+            </div>
+            <div class=" w3-margin-bottom w3-card">
+                <div id="texto">
+                    <br>
+                    <p class="text-justify">Cuide el medio ambiente, no contamine, el planeta es hogar de todos los seres vivos, no solo de los humanos.
+                    </p><br>
+                    <p class="text-justify">Ama a los animales: Dios les ha dado los rudimentos del pensamiento y el gozo sin problemas. No disturbes su gozo, no los hostigues, no los prives de su felicidad, ¡no trabajes contra las intenciones de Dios! Hombre, no te vanaglories
+                        de tu superioridad ante los animales; ellos son sin pecado, y tú, en tu grandeza corrompes la tierra con tu aparición en ella, y dejas el rastro de tu estupidez tras de ti.
+                    </p><br>
+                    <p class="text-justify">Un animal en una jaula es lo mismo que un hombre en la cárcel, la única diferencia es que el animal no ha cometido delito alguno para estar privado de la libertad.
+                    </p><br>
+                    <p class="text-justify">El hombre puede medir el valor de su propia alma en la mirada agradecida que le dirija un animal al cual ha socorrido.
+                    </p><br>
+                </div>
+            </div>
         </div>
     </div>
     </div>
 
-
+    <footer class="pie_pagina">
+        <h6>
+            @Derechos Reservados BASALUAN
+        </h6>
+    </footer>
 
 </body>
 
