--- a/pg/cajamarca.html
+++ b/pg/cajamarca.html
@@ -140,6 +140,11 @@
                 <img src="/img/cajamarca/c2.jpeg" alt="">
                 <img src="/img/cajamarca/c3.JPG" alt="">
             </div>
+            <div id="icono">
+                <a href="#top">
+                    <h4>&#128260</h4>
+                </a>
+            </div>
             <br>
 
             <hr id="ambiente">
@@ -162,6 +167,11 @@
                     <img src="/img/cajamarca/a6.jpg" alt="">
                 </div>
             </div>
+            <div id="icono">
+                <a href="#top">
+                    <h4>&#128260</h4>
+                </a>
+            </div>
             <br>
 
             <hr id="especies">
@@ -181,6 +191,11 @@
                     <img src="/img/cajamarca/f3.jpg" alt="">
                     <img src="/img/cajamarca/f4.jpg" alt="">
                     <img src="/img/cajamarca/f5.jpg" alt="">
+                </div>
+                <div id="icono">
+                    <a href="#top">
+                        <h4>&#128260</h4>
+                    </a>
                 </div>
             </div>
 
