--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <header id="header">
         <div class="container-fluid">
 
+            <audio src="/src/audio/fondo.mp3" autoplay="true" loop="true">Audio Fondo</audio>
+
             <div id="logo" class="pull-left">
                 <h1><a href="#intro" class="scrollto">BASALUAN</a></h1>
             </div>
@@ -203,7 +205,7 @@
                             </div>
                             <h2 class="title">Lugar de Residencia </h2>
                             <p>
-                                Pais: Peru <br> Departamento: Cajamarca <br> Provincia: Cajamarca <br> Distrito Cajamarca: Cajamarca <br> Direccion: Psje. Santa Victoria 197
+                                Pais: Peru <br> Departamento: Cajamarca <br> Provincia: Cajamarca <br> Distrito Cajamarca: Cajamarca <br> <address>Direccion: Psje. Santa Victoria 197</address>
                             </p>
                         </div>
                     </div>
@@ -436,6 +438,7 @@
 
         <section id="team">
             <div class="container">
+
                 <div class="section-header wow fadeInUp">
                     <h3>Anime</h3>
                     <p>Como ya mencione anteriormente uno de mis pasatiempos preferidos es ver series de animes, aqui muestro algunas series favoritas.</p>
@@ -498,7 +501,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
 
             </div>
@@ -510,119 +512,91 @@
             <div class="container">
 
                 <div class="section-header">
-                    <h3>Contact Us</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                    <h3>Cantactame</h3>
+                    <p>Si usted desea ubicarme puede recurrir a uno de estos medios.</p>
                 </div>
 
                 <div class="row contact-info">
-
                     <div class="col-md-4">
                         <div class="contact-address">
                             <i class="ion-ios-location-outline"></i>
-                            <h3>Address</h3>
-                            <address>A108 Adam Street, NY 535022, USA</address>
+                            <h3>Direccion</h3>
+                            <address>Psje. Santa Victoria 195, Cajamarca, Peru</address>
+                            <br><br>
+                            <a class="boton" id="ubicacion" href="/page/test/geolocalizacion.html" target="_blank">Como llegar !!!</a>
                         </div>
                     </div>
-
                     <div class="col-md-4">
                         <div class="contact-phone">
                             <i class="ion-ios-telephone-outline"></i>
-                            <h3>Phone Number</h3>
-                            <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                            <h3>Telefono</h3>
+                            <p><a href="tel:955852757">955852757</a></p>
+                            <p><a href="tel:941480268">941480268</a></p>
+                            <p><a href="tel:076286350">076286350</a></p>
                         </div>
                     </div>
-
                     <div class="col-md-4">
                         <div class="contact-email">
                             <i class="ion-ios-email-outline"></i>
-                            <h3>Email</h3>
-                            <p><a href="mailto:info@example.com">info@example.com</a></p>
+                            <h3>Correo</h3>
+                            <p><a href="lbardaless13@unc.edu.pe">lbardaless13@unc.edu.pe</a></p>
+                            <p><a href="basaluan.isr.22@gmail.com">basaluan.isr.22@gmail.com</a></p>
+                            <p><a href="basaluan_isr_22@outlook.com">basaluan_isr_22@outlook.com</a></p>
                         </div>
                     </div>
-
-                </div>
-
-                <div class="form">
-                    <div id="sendmessage">Your message has been sent. Thank you!</div>
-                    <div id="errormessage"></div>
-                    <form action="" method="post" role="form" class="contactForm">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                <div class="validation"></div>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                <div class="validation"></div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                            <div class="validation"></div>
-                        </div>
-                        <div class="text-center"><button type="submit">Send Message</button></div>
-                    </form>
                 </div>
 
             </div>
         </section>
-        <!-- #contact -->
 
     </main>
 
-    <!--==========================
-    Footer
-  ============================-->
+    <!-- Footer -->
+
     <footer id="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
 
                     <div class="col-lg-3 col-md-6 footer-info">
-                        <h3>BizPage</h3>
-                        <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat
-                            mauris nunc congue.</p>
+                        <h3>BASALUAN</h3>
+                        <p>Luis Angel Bardales Saucedo, estudiante de ingenieria de sistemas, es un persona que en caso que usted requiera apoyo en algo relacionado con la carrea mencionada anteriormente puede ayudarle en lo que sea posible.</p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
+                        <h4>Links del Sitio Web</h4>
                         <ul>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Home</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">About us</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Services</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Privacy policy</a></li>
+                            <li><i class="ion-ios-arrow-right"></i> <a href="#intro">Inicio</a></li>
+                            <li><i class="ion-ios-arrow-right"></i> <a href="#about">Mi Informacion</a></li>
+                            <li><i class="ion-ios-arrow-right"></i> <a href="#services">Mis Estudios</a></li>
+                            <li><i class="ion-ios-arrow-right"></i> <a href="#portfolio">Galeria de Imagenes</a></li>
+                            <li><i class="ion-ios-arrow-right"></i> <a href="#team">Anime</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-contact">
-                        <h4>Contact Us</h4>
+                        <h4>Mi Contacto</h4>
                         <p>
-                            A108 Adam Street <br> New York, NY 535022<br> United States <br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            Psje. Santa Victoria 195 <br> Cajamarca<br> Peru <br>
+                            <strong>Telefono:</strong> 955852757<br>
+                            <strong>Email:</strong> lbardaless13@unc.edu.pe<br>
                         </p>
 
                         <div class="social-links">
-                            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://twitter.com/" class="twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/?hl=es-la" class="instagram"><i class="fa fa-instagram"></i></a>
+                            <a href="https://mail.google.com/mail/u/0/#inbox" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                            <a href="https://www.linkedin.com/m/login/" class="linkedin"><i class="fa fa-linkedin"></i></a>
                         </div>
 
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
+                        <h4>Sitio Web</h4>
+                        <p>
+                            Curso: Ingenieria Web <br> Docente: Edwin Valencia Castillo <br> Universidad Nacional de Cajamarca <br>
+                        </p>
                     </div>
 
                 </div>
@@ -631,24 +605,17 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
+                &copy; Copyright <strong>Basaluan</strong>. All Rights Reserved
             </div>
             <div class="credits">
-                <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-        -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by <a href="https://www.facebook.com/">Basaluan</a>
             </div>
         </div>
     </footer>
-    <!-- #footer -->
 
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     <!-- JavaScript Libraries -->
+
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/jquery/jquery-migrate.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -662,6 +629,7 @@
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
+
     <!-- Contact Form JavaScript File -->
     <script src="contactform/contactform.js"></script>
 
