--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Basaluan</title>
 
     <!-- Favicons -->
-    <link href="/src/ico/icono.ico" rel="icon">
-    <link href="/src/ico/icono.ico" rel="apple-touch-icon">
+    <link href="/src/ico/icono.ico" rel="icon" type="image/png">
+    <link href="/src/ico/icono.ico" rel="apple-touch-icon" type="image/png">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
