--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="#intro">Inicio</a></li>
-                    <li><a href="#about">Mi Informacion</a></li>
+                    <li><a href="#about">Mi Información</a></li>
                     <li><a href="#services">Mis Estudios</a></li>
                     <li><a href="#portfolio">Galeria</a></li>
                     <li><a href="#team">Anime</a></li>
                     <li class="menu-has-children"><a href="">Laboratorios de Clase</a>
                         <ul>
                             <li><a href="/page/laboratorio_clase_01.html">Laboratorio - Carta</a></li>
-                            <li><a href="/page/practica_calificada_01.html">Practica Calificada 01</a></li>
+                            <li><a href="/page/practica_calificada_01.html">Práctica Calificada 01</a></li>
                             <li><a href="/page/diversidad_animal_cajamarca.html">Diversidad Animal de Cajamarca</a></li>
-                            <li><a href="/page/practica_calificada_02.html">Practica Calificada 02</a></li>
+                            <li><a href="/page/practica_calificada_02.html">Práctica Calificada 02</a></li>
                         </ul>
                     </li>
                     <li><a href="#contact">Contactarme</a></li>
@@ -90,7 +90,7 @@
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h3>Descripcion del Sitio Web</h3>
-                                <p>Este es mi sito web en la cual se mostrara informacion correspondiente a mi persona; ademas, de que incluira los laboratorios y practicas desarrolladas.</p>
+                                <p>Este es mi sito web en la cual se mostrara información correspondiente a mi persona; además, de que incluira los laboratorios y prácticas desarrolladas.</p>
                                 <a href="#featured-services" class="btn-get-started scrollto">BASALUAN</a>
                             </div>
                         </div>
@@ -99,8 +99,8 @@
                         <div class="carousel-background"><img src="/src/img/galeria/carrusel/c3.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h3>Informacion con Respecto a la Creacion del Sitio Web</h3>
-                                <p>El sitio web se desarrolla en el curso de Ingenieria Web de la carrera de Ingenieria de Sistemas en la Universidad Nacional de Cajamarca</p>
+                                <h3>Información con Respecto a la Creación del Sitio Web</h3>
+                                <p>El sitio web se desarrollo en el curso de Ingenieria Web de la carrera de Ingenieria de Sistemas en la Universidad Nacional de Cajamarca, y ha ido actualizandoce a lo largo del tiempo.</p>
                                 <a href="#featured-services" class="btn-get-started scrollto">BASALUAN</a>
                             </div>
                         </div>
@@ -133,22 +133,20 @@
 
                     <div class="col-lg-4 box">
                         <i class="ion-ios-bookmarks-outline"></i>
-                        <h4 class="title"><a href="">Descripcion</a></h4>
-                        <p class="description">Actualmente estoy estudiando Ingenieria de Sistemas en la Universidad Nacional de Cajamarca. Mi gran objetivo es ser un profesional competente; ademas, especializarme en el manejo e implementacion de base de datos y en el desarrollo
-                            de aplicaciones.</p>
+                        <h4 class="title"><a href="">Descripción</a></h4>
+                        <p class="description">Bachiller en Ingenieria de Sistemas de la Universidad Nacional de Cajamarca. Mi gran objetivo es ser un profesional competente; además, especializarme en DevOps, análisis de datos, desarrollo de software, base de datos, seguridad de la información, gestión de procesos, aplicaciones web, marketing digital, virtualización, investigación, networking, planificación de recursos empresariales, front-end developer y más.</p>
                     </div>
 
                     <div class="col-lg-4 box box-bg">
                         <i class="ion-ios-stopwatch-outline"></i>
-                        <h4 class="title"><a href="">Pasatiempos</a></h4>
-                        <p class="description">En mis ratos libres practico algun deporte como el futbol, tambien me gusta mucho dibujar y jugar videojuegos, en especial PES (Pro Evolution Soccer); ademas, de que me encanta leer maga y ver series de anime japones.</p>
+                        <h4 class="title"><a href="">Pasa-tiempos</a></h4>
+                        <p class="description">En mis ratos libres práctico algun deporte como el fútbol, también me gusta mucho dibujar y jugar videojuegos, en especial PES (Pro Evolution Soccer); además, de que me encanta leer manga y ver series de anime japonés.</p>
                     </div>
 
                     <div class="col-lg-4 box">
                         <i class="ion-ios-heart-outline"></i>
                         <h4 class="title"><a href="">Gustos</a></h4>
-                        <p class="description">Siento gran admiracion por la cultura japonesa, me gusta la forma en que ellos tienen una vison diferente de la vida y el planeta; es por eso que en un fututo tengo como objetivo viajar a este pais y, de conocer y vivir sus tradiciones,
-                            su filosofia, sus lugares turisticos, etc.</p>
+                        <p class="description">Siento gran admiración por la cultura japonesa, me gusta la forma en que ellos tienen una visón diferente de la vida y el planeta; es por eso que en un fututo tengo como objetivo viajar a este pas para asi conocer y vivir sus tradiciones, filosofía, lugares turísticos, etc. de manera personal.</p>
                     </div>
 
                 </div>
@@ -163,7 +161,7 @@
                 <!-- Section Header -->
 
                 <header class="section-header">
-                    <h3>Mi Informacion</h3>
+                    <h3>Mi Información</h3>
                     <p>El psudonimo que me eh puesto o que me gusta es "Basaluan" dado que representa todas las partes iniciales de mis nombres y apellidos completos.</p>
                 </header>
 
@@ -190,7 +188,7 @@
                             </div>
                             <h2 class="title">Algunos Datos </h2>
                             <p>
-                                Codigo SUNEDU: 2013110005 <br> DNI: 71396592 <br> NÂ° Licencia Conducir: L71396892
+                                DNI: 71396592 <br> Código SUNEDU: 2013110005 <br> N° Licencia Conducir: L71396892
                             </p>
                         </div>
                     </div>
@@ -203,7 +201,7 @@
                             </div>
                             <h2 class="title">Lugar de Residencia </h2>
                             <p>
-                                Pais: Peru <br> Departamento: Cajamarca <br> Provincia: Cajamarca <br> Distrito Cajamarca: Cajamarca <br> <address>Direccion: Psje. Santa Victoria 197</address>
+                                País: Peru <br> Departamento: Cajamarca <br> Provincia: Cajamarca <br> Distrito Cajamarca: Cajamarca <br> Dirección: Psje. Santa Victoria 197
                             </p>
                         </div>
                     </div>
@@ -220,7 +218,7 @@
 
                 <header class="section-header wow fadeInUp">
                     <h3>Mis Estudios</h3>
-                    <p>Actualmente soy estudiante de la facultad de Ingenieria de Sistemas en la Universidad Nacional de Cajamarca, y voy cursando mi ultimo aÃ±o de estudios.</p>
+                    <p>Bachiller en Ingeniería de Sistemas de la Universidad Nacional de Cajamarca.</p>
                 </header>
 
                 <div class="row">
@@ -237,7 +235,7 @@
                     <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                         <div class="icon"><i class="ion-ios-home"></i></div>
                         <h4 class="title"><a href="https://www.deperu.com/educacion/educacion-primaria/escuela-82392-nuestra-senora-de-fatima-celendin-82491">Estudios de Primaria</a></h4>
-                        <p class="description">I.E.P. Nuestra SeÃ±ora de Fatima NÂ° 82392</p>
+                        <p class="description">I.E.P. Nuestra Señora de Fatima N° 82392</p>
                     </div>
                 </div>
 
@@ -249,8 +247,7 @@
         <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
                 <h3>Curriculum Vitae</h3>
-                <p> En caso que usted quiera requerir con mis servicios profesionales puede contactarme; ademas en este enlace dejo mi Curriculum Vitae con la experiencia que eh adquirido durante estos aÃ±os de universitario. </p>
-                <a class="cta-btn" href="/src/doc/cv.pdf">Curriculum Vitae</a>
+                <p> En caso que usted requiera de mis servicios profesionales puede contactarme; adicionalmente en le siguiente enlace dejo mi Curriculum Vitae.</p>
             </div>
         </section>
 
@@ -285,7 +282,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Individual</h4>
-                                <p>Yo adquiriendo mi laptop</p>
+                                <p>Adquiriendo a mi futura y fiel acompañante</p>
                             </div>
                         </div>
                     </div>
@@ -299,7 +296,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Familiar</h4>
-                                <p>Jivo, mi tio fallecido, un angel de la guarda en mi vida</p>
+                                <p>Jivo, mi tío fallecido, un ángel de la guarda en mi vida</p>
                             </div>
                         </div>
                     </div>
@@ -313,7 +310,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Individual</h4>
-                                <p>Una maÃ±ana deportiva</p>
+                                <p>Mañana deportiva</p>
                             </div>
                         </div>
                     </div>
@@ -327,7 +324,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Grupal</h4>
-                                <p>Mis amigos de la universidad</p>
+                                <p>Amigos de la universidad</p>
                             </div>
                         </div>
                     </div>
@@ -341,7 +338,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Familiar</h4>
-                                <p>Mi hermano menor Maickol</p>
+                                <p>Mi hermano menor: Maickol</p>
                             </div>
                         </div>
                     </div>
@@ -355,7 +352,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Individual</h4>
-                                <p>Una noche de cine, viendo el anime que mas me gusta Dragon Ball</p>
+                                <p>Noche de cine, viendo el anime que más me fascina Dragon Ball</p>
                             </div>
                         </div>
                     </div>
@@ -369,7 +366,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Grupal</h4>
-                                <p>Mis compaÃ±eros del colegio en una salida al campo</p>
+                                <p>Compañeros del colegio en una salida al campo</p>
                             </div>
                         </div>
                     </div>
@@ -383,7 +380,7 @@
 
                             <div class="portfolio-info">
                                 <h4><a href="#">Grupal</a></h4>
-                                <p>Mis amigos de la vida</p>
+                                <p>Amigos de la vida</p>
                             </div>
                         </div>
                     </div>
@@ -398,7 +395,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Familiar</h4>
-                                <p>Rodrigo mi primito querido</p>
+                                <p>Rodrigo mi primo querido</p>
                             </div>
                         </div>
                     </div>
@@ -425,9 +422,9 @@
                     <img src="/src/img/galeria/fotos/f4.jpg" alt="Baile para la Corrida en Sucre, Celendin">
                     <img src="/src/img/galeria/fotos/f5.jpg" alt="En la Fongal con los Amigos">
                     <img src="/src/img/galeria/fotos/f6.jpg" alt="Campeonato de la San Francisco">
-                    <img src="/src/img/galeria/fotos/f7.jpg" alt="Un Dia de Playa en Trujillo">
+                    <img src="/src/img/galeria/fotos/f7.jpg" alt="Dia de Playa en Trujillo">
                     <img src="/src/img/galeria/fotos/f8.jpg" alt="Cachimbo 2013">
-                    <img src="/src/img/galeria/fotos/f9.jpg" alt="Un Viaje en Moto">
+                    <img src="/src/img/galeria/fotos/f9.jpg" alt="Viaje en Moto">
                 </div>
             </div>
         </section>
@@ -439,7 +436,7 @@
 
                 <div class="section-header wow fadeInUp">
                     <h3>Anime</h3>
-                    <p>Como ya mencione anteriormente uno de mis pasatiempos preferidos es ver series de animes, aqui muestro algunas series favoritas.</p>
+                    <p>Uno de mis pasatiempos preferidos es ver series de animes, en donde se puede observar diferentres tramas muy interesantes. Aquí muestro algunos de mis series favoritas.</p>
                 </div>
 
                 <div class="row">
@@ -511,7 +508,7 @@
 
                 <div class="section-header">
                     <h3>Cantactame</h3>
-                    <p>Si usted desea ubicarme puede recurrir a uno de estos medios.</p>
+                    <p>Si usted desea contactarme, puede recurrir a cualquiera de estos medios.</p>
                 </div>
 
                 <div class="row contact-info">
@@ -529,8 +526,8 @@
                             <i class="ion-ios-telephone-outline"></i>
                             <h3>Telefono</h3>
                             <p><a href="tel:955852757">955852757</a></p>
-                            <p><a href="tel:941480268">941480268</a></p>
-                            <p><a href="tel:076286350">076286350</a></p>
+                            <p><a href="tel:941480268"></a></p>
+                            <p><a href="tel:076286350"></a></p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -538,8 +535,8 @@
                             <i class="ion-ios-email-outline"></i>
                             <h3>Correo</h3>
                             <p><a href="lbardaless13@unc.edu.pe">lbardaless13@unc.edu.pe</a></p>
-                            <p><a href="basaluan.isr.22@gmail.com">basaluan.isr.22@gmail.com</a></p>
-                            <p><a href="basaluan_isr_22@outlook.com">basaluan_isr_22@outlook.com</a></p>
+                            <p><a href="basaluan.isr.22@gmail.com">basaluan.labs.22@gmail.com</a></p>
+                            <p><a href="basaluan_isr_22@outlook.com">basaluan_labs_22@outlook.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -558,7 +555,7 @@
 
                     <div class="col-lg-3 col-md-6 footer-info">
                         <h3>BASALUAN</h3>
-                        <p>Luis Angel Bardales Saucedo, estudiante de ingenieria de sistemas, es un persona que en caso que usted requiera apoyo en algo relacionado con la carrea mencionada anteriormente puede ayudarle en lo que sea posible.</p>
+                        <p>Bachiller en Ingeniería de Sistemas de la Universidad Nacional de Cajamarca, perteneciente al quinto superior y con experiencia en desarrollo de software e implementación de sistemas PI y sistemas Sense; además, de brindar servicio y soporte técnico de computadoras.  Orientado a resultados a través de la identificación de oportunidades de mejora de procesos y solución de problemas con el uso de tecnologías de información, proactivo, siempre dispuesto a aprender y trabajar en equipo.</p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
