--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="col-lg-4 box">
                         <i class="ion-ios-bookmarks-outline"></i>
                         <h4 class="title"><a href="">Descripcion</a></h4>
-                        <p class="description">Bachiller en Ingenieria de Sistemas de la Universidad Nacional de Cajamarca. Mi gran objetivo es ser un profesional competente; además, especializarme en DevOps, análisis de datos, desarrollo de software, base de datos, seguridad de la información, gestión de procesos, aplicaciones web, marketing digital, virtualización, investigación, networking, planificación de recursos empresariales, front-end developer y más.</p>
+                        <p class="description">Bachiller en Ingenieria de Sistemas de la Universidad Nacional de Cajamarca. Mi gran objetivo es ser un profesional competente y especializarme en temas como DevOps, analisis de datos, seguridad de la información, gestión de procesos, marketing digital, networking, ERP, front-end developer y más.</p>
                     </div>
 
                     <div class="col-lg-4 box box-bg">
